[gd_scene load_steps=18 format=3 uid="uid://edik7in6a6us"]

[ext_resource type="Script" path="res://assets/scripts/llamada_l.gd" id="1_rchcx"]
[ext_resource type="Texture2D" uid="uid://bit588fxad5ht" path="res://assets/sprites/call_frame_l.png" id="2_6ftdt"]
[ext_resource type="Theme" uid="uid://bm1ub45g4i7os" path="res://themes/ai_theme.tres" id="3_jg8el"]
[ext_resource type="Shader" path="res://assets/shaders/gui.gdshader" id="4_m7l4o"]
[ext_resource type="Texture2D" uid="uid://bkv48mq0skij4" path="res://assets/sprites/intro/radio_animacion/radio_1.png" id="5_xa6iw"]
[ext_resource type="Texture2D" uid="uid://c035taclf7dxg" path="res://assets/sprites/intro/radio_animacion/radio_2.png" id="6_jokh1"]
[ext_resource type="Texture2D" uid="uid://dn6uwx1hwfihr" path="res://assets/sprites/intro/radio_animacion/radio_3.png" id="7_mjnpo"]
[ext_resource type="AudioStream" uid="uid://dapc7nab8qjue" path="res://assets/audio/MÃºsica de elevador- efecto de sonido..mp3" id="9_81wu1"]
[ext_resource type="PackedScene" uid="uid://brftkxjlho48o" path="res://scenes/chat.tscn" id="33_i83xj"]

[sub_resource type="ViewportTexture" id="ViewportTexture_mxxat"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qi1dy"]
resource_local_to_scene = true
albedo_texture = SubResource("ViewportTexture_mxxat")

[sub_resource type="QuadMesh" id="QuadMesh_hqtvl"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_qi1dy")
size = Vector2(950, 799)

[sub_resource type="ViewportTexture" id="ViewportTexture_5bihb"]
viewport_path = NodePath("SubViewport")

[sub_resource type="VideoStreamTheora" id="VideoStreamTheora_q7hx5"]
resource_local_to_scene = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ijpqp"]
shader = ExtResource("4_m7l4o")
shader_parameter/range = 0.02
shader_parameter/noiseQuality = 250.0
shader_parameter/noiseIntensity = 0.0088
shader_parameter/offsetIntensity = 0.01
shader_parameter/colorOffsetIntensity = 0.2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_qp6kx"]

[sub_resource type="SpriteFrames" id="SpriteFrames_28s8f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_xa6iw")
}, {
"duration": 1.0,
"texture": ExtResource("6_jokh1")
}, {
"duration": 1.0,
"texture": ExtResource("7_mjnpo")
}],
"loop": true,
"name": &"radio",
"speed": 5.0
}]

[node name="LlamadaL" type="Node2D"]
script = ExtResource("1_rchcx")

[node name="Video" type="MeshInstance2D" parent="."]
position = Vector2(523, 450)
scale = Vector2(1, -1)
mesh = SubResource("QuadMesh_hqtvl")
texture = SubResource("ViewportTexture_5bihb")

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2i(950, 800)

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.69501
offset_top = 50.0
offset_right = -9.69501
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
stream = SubResource("VideoStreamTheora_q7hx5")

[node name="GlitchTexture" type="TextureRect" parent="SubViewport"]
material = SubResource("ShaderMaterial_ijpqp")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("NoiseTexture2D_qp6kx")

[node name="Elementos" type="Node2D" parent="."]

[node name="CallFrameL" type="Sprite2D" parent="Elementos"]
position = Vector2(955, 533)
texture = ExtResource("2_6ftdt")

[node name="RadioAnimation" type="AnimatedSprite2D" parent="Elementos"]
position = Vector2(1725.24, 972.034)
scale = Vector2(0.549245, 0.198795)
sprite_frames = SubResource("SpriteFrames_28s8f")
animation = &"radio"

[node name="RadioAnimation2" type="AnimatedSprite2D" parent="Elementos"]
position = Vector2(1450.74, 972.034)
scale = Vector2(0.553165, 0.199)
sprite_frames = SubResource("SpriteFrames_28s8f")
animation = &"radio"

[node name="Linea" type="Label" parent="Elementos"]
offset_left = 55.0
offset_top = 43.0
offset_right = 123.0
offset_bottom = 66.0
theme = ExtResource("3_jg8el")
text = "LINEA N"

[node name="Chat" parent="Elementos" instance=ExtResource("33_i83xj")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_81wu1")
parameters/looping = true

[connection signal="finished" from="SubViewport/VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
